// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaTelemetryAdapter collects monitor and overview data 1`] = `
Object {
  "last_24_hours": Object {
    "hits": Object {
      "autoRefreshEnabled": true,
      "autorefreshInterval": Array [
        30,
      ],
      "dateRangeEnd": Array [
        "now",
      ],
      "dateRangeStart": Array [
        "now-15",
      ],
      "fleet_monitor_frequency": Array [],
      "fleet_monitor_name_stats": Object {
        "avg_length": 0,
        "max_length": 0,
        "min_length": 0,
      },
      "fleet_no_of_unique_monitors": 0,
      "monitor_frequency": Array [],
      "monitor_name_stats": Object {
        "avg_length": 0,
        "max_length": 0,
        "min_length": 0,
      },
      "monitor_page": 1,
      "no_of_unique_monitors": 0,
      "no_of_unique_observer_locations": 0,
      "observer_location_name_stats": Object {
        "avg_length": 0,
        "max_length": 0,
        "min_length": 0,
      },
      "overview_page": 1,
      "settings_page": 1,
    },
  },
}
`;

exports[`KibanaTelemetryAdapter drops old buckets and reduces current window 1`] = `
Object {
  "last_24_hours": Object {
    "hits": Object {
      "autoRefreshEnabled": true,
      "autorefreshInterval": Array [
        30,
      ],
      "dateRangeEnd": Array [
        "now",
      ],
      "dateRangeStart": Array [
        "now-15",
      ],
      "fleet_monitor_frequency": Array [],
      "fleet_monitor_name_stats": Object {
        "avg_length": 0,
        "max_length": 0,
        "min_length": 0,
      },
      "fleet_no_of_unique_monitors": 0,
      "monitor_frequency": Array [],
      "monitor_name_stats": Object {
        "avg_length": 0,
        "max_length": 0,
        "min_length": 0,
      },
      "monitor_page": 2,
      "no_of_unique_monitors": 0,
      "no_of_unique_observer_locations": 0,
      "observer_location_name_stats": Object {
        "avg_length": 0,
        "max_length": 0,
        "min_length": 0,
      },
      "overview_page": 1,
      "settings_page": 2,
    },
  },
}
`;
